fixed the text wrap on the biographies page, map/timeline page - expanded to the full width of the page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -673,7 +673,7 @@ section#search {
 	left: 0;
 	top: 0;
 	z-index: 9;
-	background: rgba(255,255,255,0.5);
+	background: rgba(255,255,255,0.6);
 	.modal-content{
 		background:$black;
 		color:$white;
@@ -889,6 +889,9 @@ section#search {
 		padding: 0 3% 20vh 3%;
 		line-height: 1.3;
 		font-size: 1.2rem;
+		.width-100 {
+			width: 100%;
+		}
 		.summary{
 			border-top: 1px dashed $lightgray;
 			padding:1rem 0;
@@ -910,7 +913,7 @@ section#search {
 			h2{
 				margin:0 0 0.5rem 0;
 				font-size:1.4rem;
-				float: left;
+				display: inline-block;
 			width: 100%;
 				&.section{
 					margin: 1rem 0 1rem 0;
@@ -1062,7 +1065,8 @@ section#search {
 			width:48%;
 			margin-right:2%;
 			overflow: auto;
-			height:400px !important;
+			// height:400px !important;
+			height: 80vh !important;
 			/* Leaflet */
 			.leaflet-popup-content-wrapper{
 				color:$white;
@@ -1105,10 +1109,12 @@ section#search {
 		}/* end map */
 		/* Accordion styles */
 		.accordion-wrapper{ 
-			float:left;
-			width:50%;
+			// float:left;
+			// width:50%;
+			width: auto;
 			overflow: auto;
-			height:400px;
+			// height:400px;
+			height: 80vh;
 			.accordion {
 				position: relative;
 				overflow: hidden;
@@ -1582,7 +1588,7 @@ section#search {
 				  font-size: 0.6rem;
 				}
 				img{
-					width:100%;
+					width: 50%;
 					height: auto;
 					border:1px solid $lightgray;
 					border-top:0;	
